# scatk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
include/: analyzer.h  defs.h  fix64.h  matplotlibcpp.h  reader.h
src/: analyzer.cc  main.cc  reader.cc
